--- a/MovieDatabase/MovieDatabase/MovieDatabase.csproj
+++ b/MovieDatabase/MovieDatabase/MovieDatabase.csproj
@@ -99,9 +99,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>MainDataSet.xsd</DependentUpon>
     </Compile>
-    <Compile Include="MovieDatabaseDataSet.cs">
-      <DependentUpon>MovieDatabaseDataSet.xsd</DependentUpon>
-    </Compile>
     <Compile Include="MovieDatabaseDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -109,6 +106,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilizator.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
